# Langworm

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: dictionary.json
resources/: app.rc  resources.qrc  style.qss
src/: main.cpp
src/core/: data.cpp  data.h  dictionary.cpp  dictionary.h
src/ui/: learning.cpp  learning.h  learningadvanced.cpp  learningadvanced.h  learningmenu.cpp  learningmenu.h  mainwindow.cpp  mainwindow.h  menu.cpp  menu.h  settings.cpp  settings.h
